--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"/>
-    <link rel="stylesheet" href="C:\Users\sreeee\Desktop\Resumes\Rajesh-anna-Resume\style.css" />
+    <link rel="stylesheet" href="C:\Users\sreeee\Desktop\Resumes\rajesh-cv\style.css" />
     <script src="https://kit.fontawesome.com/f10064b6c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
