--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="left_side">
             <div class="profileText">
                 <div class="img8x">
-                    <img src="C:\Users\sreeee\Desktop\Resumes\Rajesh-anna-Resume\rajesh.jpg" alt="">
+                    <img src="C:\Users\sreeee\Desktop\Resumes\Rajesh-anna-Resume\rajesh.jpg" alt="rajesh">
                 </div>
                 <h2>Kasapuram Rajesh<br><span>Video Content Developer</span></h2>
             </div>
